# linkedln-jobs-posting

./: .env.example  .gitignore  PROJECT_WIKI.md  README.md  main.py  pyproject.toml  requirements.txt
job-market-pipeline/: pyproject.toml  requirements.txt
job-market-pipeline/dbt/: .user.yml  dbt_project.yml  profiles.yml
job-market-pipeline/dbt/models/marts/: dim_companies.sql  dim_locations.sql  dim_skills.sql  fct_job_postings.sql  fct_job_skills.sql  schema.yml
job-market-pipeline/dbt/models/staging/: schema.yml  sources.yml  stg_companies.sql  stg_company_industries.sql  stg_company_specialities.sql  stg_employee_counts.sql  stg_industries.sql  stg_job_benefits.sql  stg_job_industries.sql  stg_job_postings.sql  stg_job_salaries.sql  stg_job_skills.sql  stg_skills.sql
job-market-pipeline/docs/: DBT_KET_QUA_VA_XU_LY_DU_LIEU.md
job-market-pipeline/scripts/: extract.py  load.py
